"FEAT" create prettierrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,12 @@
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": {}
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  }
 }
